2002-08-02  Darin Adler  <darin@apple.com>

	- fixed 3015522 -- crash decoding http://www.haaretz.co.il/

        * khtml/misc/decoder.cpp: (Decoder::setEncoding): Put some hacks for
	handling Hebrew text encoding inside ifndef APPLE_CHANGES. It's not clear
	that these or the equivalent are needed for WebCore (they are related to
	the as-yet unimplemented bidirectional text support) and they were making
	us crash.

	- fixed 2949235 -- checkboxes in wrong place until you scroll away and back

	I fixed this once before, then removed that fix in favor of a simpler one.
	But the simpler one didn't work, and I didn't test it properly. Now I have
	a fix that works without the drawbacks of the original.

        * khtml/rendering/render_replaced.cpp: (RenderWidget::layout): Remove the
	call to move the widget aside. This does no good because it's only called
	if the widget is told it needs to layout, which only happens if it's resized.

        * khtml/rendering/render_root.cpp: (RenderRoot::layout): Call a KWQ function
	so we can do some work at layout time.

        * kwq/KWQKHTMLPartImpl.mm:
        (moveWidgetsAside): Added. Function used recursively to move all widgets aside.
        (KWQKHTMLPartImpl::layout): Added. Called at layout time; moves all the widgets
	aside. They are moved back when print functions are called.

	WebCore support for feature where client redirects are treated as if the
	page was continuing to load. A big part of this was changing redirection
	so that it uses QTimer, allowing us to use more of the original KHTMLPart
	code. I added a feature to QTimer that KWQKHTMLPartImpl uses to monitor
	what KHTMLPart does with the timer.

        * kwq/qt/qobject.h: Changed "slots" definition so that all slots are public (to help
	KWQSlot get at them). Added a prefix for the slot and signal strings, so that we can detect
	the case where it's trying to connect a slot to another slot. Implement the convenience